fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -239,6 +239,17 @@ body {
 
 }
 
+.content4 {
+	/*padding:3vh;*/
+	/*font-family: 'Lato', sans-serif;*/
+	font-weight:300;
+	text-align:justify;
+	font-size:1.5em;
+	padding:1.75vh !important;
+
+}
+
+
 .photo-about {
 	/*width:90%;*/
 	margin-left:auto;
@@ -280,7 +291,7 @@ body {
 }
 
 .project-row {
-	margin-bottom:3vh;
+	margin-bottom:2vh;
 }
 .project-modules {
 	text-align:center;
@@ -628,6 +639,11 @@ footer {
 		padding-bottom:3vh;
 	}
 
+	.content4 {
+		font-size:1.2em;
+		padding-bottom:1.2vh;
+	}
+
 	#kmsembed-0_dj2h7e6d {
 		height:30% !important;
 	}
@@ -827,6 +843,12 @@ footer {
 		padding:0;
 	}
 
+	.content4 {
+		font-size:1.2em;
+		margin-bottom:5vh;
+		padding:0;
+	}
+
 	#kmsembed-0_dj2h7e6d {
 		height:35% !important;
 	}
@@ -911,7 +933,7 @@ footer {
 		margin-right:auto;
 		display:block;
 
-		
+
 	}
 
 	.featured-img {
@@ -1080,6 +1102,12 @@ footer {
 	.content3 {
 		font-size:1.2em;
 		margin-bottom:10vh;
+		padding:0;
+	}
+
+	.content4 {
+		font-size:1.2em;
+		margin-bottom:5vh;
 		padding:0;
 	}
 
@@ -1254,6 +1282,11 @@ footer {
 	.content3 {
 		font-size:1.3em;
 		margin-bottom:10vh;
+		padding:0;
+	}
+	.content4 {
+		font-size:1.3em;
+		margin-bottom:5vh;
 		padding:0;
 	}
 
@@ -1508,6 +1541,12 @@ footer {
 .content3 {
 		font-size:1.2em;
 		margin-bottom:10vh;
+		padding:0;
+	}
+
+.content4 {
+		font-size:1.2em;
+		margin-bottom:3vh;
 		padding:0;
 	}
 
